--- a/src/main/resources/assets/tinkertantrum/lang/en_us.lang
+++ b/src/main/resources/assets/tinkertantrum/lang/en_us.lang
@@ -14,3 +14,6 @@ modifier.capitalism.desc=ONE MILLION DOLLARS\nImproves your attacks, but drains 
 
 modifier.sellout.name=Sellout
 modifier.sellout.desc=§oThis Modifier is Sponsored by...§r\nInstantly sells Drops from Blocks and Mobs, if they can be sold.
+
+modifier.home_run.name=Home Run
+modifier.home_run.desc=§oUp on the C-Stick§r\nConverts damage dealt into upwards momentum.
