optional ConArm, EBWizardry, and ASC integration Added basic Conarm trait framework
new stuff
- Devoritium (ASC) material, similar to iron but a little weaker, and has the traits...
- Antimagic (and armor variant), applies "magical exhaustion" from ASC if you have something with it.
Tool version applies the aforementioned effect in increasing levels to the target. Armor version reduces magic damage heavily (40%).
- Capitalism for Armor, similar to capitalism for tools, reduces damage taken by a factor for each level. much less powerful since it can stack for each piece.

Identifiers for traits are no longer prefixed with "TRAIT_" because i don't like writing that all the time.

--- a/src/main/resources/assets/tinkertantrum/lang/en_us.lang
+++ b/src/main/resources/assets/tinkertantrum/lang/en_us.lang
@@ -17,3 +17,18 @@ modifier.sellout.desc=§oThis Modifier is Sponsored by...§r\nInstantly sells Dr
 
 modifier.home_run.name=Home Run
 modifier.home_run.desc=§oUp on the C-Stick§r\nConverts damage dealt into upwards momentum.
+
+modifier.antimagic.name=Anti-magic
+modifier.antimagic.desc=§oHeresy!§r\nReduces the Potency of Magic used by the wielder and struck foes.
+
+
+# Armor-Specific
+modifier.antimagic_armor.name=Anti-magic
+modifier.antimagic_armor.desc=§oHeresy!§r\nGrants excellent protection from Magical attacks, but makes your Spells less potent.
+
+modifier.capitalism_armor.name=Capitalism
+modifier.capitalism_armor.desc=§oONE MILLION DOLLARS§r\nReduces damage taken, but drains your Money. Effects are stronger when you have more Money.
+
+
+# Materials
+material.devoritium.name=Devoritium
