TraitNihilo, Void Metal material, and ModifierRevealing - TraitNihilo - it's Void Metal's autorepair, but with a limit of 50% durability. - ModifierRevealing - Goggles of Revealing but for ConArm helmets. Uses a mixin into conarm's Helmet class to work, so mod requires MixinBooter for that function.
Void Metal material, head parts are weak but have "Ex Nihilo" trait. Core and Plates with ConArm are similar. Handle, Extra, and Trim parts do not have Ex Nihilo, but have quite a bit of durability to compensate.

--- a/src/main/resources/assets/tinkertantrum/lang/en_us.lang
+++ b/src/main/resources/assets/tinkertantrum/lang/en_us.lang
@@ -21,6 +21,9 @@ modifier.home_run.desc=§oUp on the C-Stick§r\nConverts damage dealt into upwar
 modifier.antimagic.name=Anti-magic
 modifier.antimagic.desc=§oHeresy!§r\nReduces the Potency of Magic used by the wielder and struck foes.
 
+modifier.nihilo.name=Ex Nihilo
+modifier.nihilo.desc=§oIt came from Nothing...§r\nThe tool will magically repair itself up to 50% of its maximum durability.
+
 
 # Armor-Specific
 modifier.antimagic_armor.name=Anti-magic
@@ -29,6 +32,10 @@ modifier.antimagic_armor.desc=§oHeresy!§r\nGrants excellent protection from Ma
 modifier.capitalism_armor.name=Capitalism
 modifier.capitalism_armor.desc=§oONE MILLION DOLLARS§r\nReduces damage taken, but drains your Money. Effects are stronger when you have more Money.
 
+modifier.revealing_armor.name=Revealing
+modifier.revealing_armor.desc=§oShow me your true form!§r\nActs as Goggles of Revealing.
+
 
 # Materials
 material.devoritium.name=Devoritium
+material.void_metal.name=Void Metal
