TraitCheeseReaper and Modifier/Trait fetching framework
TraitCheeseReaper
- Rats compat trait that makes mobs drop cheese. Does not work currently, but doesn't make the game shit itself either.
- might scrap later, but it was a fun idea in the moment.

TraitEssencePowered
- Mystical Agriculture trait
- makes attacks do more damage when you have MA essence in the offhand and consumes that essence.
- not having essence makes you do less damage.

changed TraitAntimagic and its Armor version slightly.
- Constructor takes an int "level" for the trait instance, so that Head/Core parts can be stronger than Extra/Trim in their effect by using level 2.
- created AncientSpellcraftHelper to contain the code for the onUpdate method for both versions of this trait. more mod helper classes will probably be a regular.

Modifier/Trait fetching Framework
- A bunch of variables that contain all Modifiers currently in the mod (a whopping 2 atm), with versions that filter out modifiers which Should Not be Available in the current environment, due to mod dependencies or whatnot.

--- a/src/main/resources/assets/tinkertantrum/lang/en_us.lang
+++ b/src/main/resources/assets/tinkertantrum/lang/en_us.lang
@@ -18,16 +18,26 @@ modifier.sellout.desc=§oThis Modifier is Sponsored by...§r\nInstantly sells Dr
 modifier.home_run.name=Home Run
 modifier.home_run.desc=§oUp on the C-Stick§r\nConverts damage dealt into upwards momentum.
 
-modifier.antimagic.name=Anti-magic
-modifier.antimagic.desc=§oHeresy!§r\nReduces the Potency of Magic used by the wielder and struck foes.
+modifier.antimagic_1.name=Anti-magic
+modifier.antimagic_1.desc=§oHeresy!§r\nReduces the Potency of Magic used by the wielder and struck foes.
+modifier.antimagic_2.name=Anti-magic II
+modifier.antimagic_2.desc=§oHeresy!§r\nReduces the Potency of Magic used by the wielder and struck foes. Effects last longer and stack faster.
+
+modifier.cheese_reaper.name=Grim Cheepear
+modifier.cheese_reaper.desc=§oCheesy Punchline§r\nMakes killed mobs also drop Cheese.
 
 modifier.nihilo.name=Ex Nihilo
 modifier.nihilo.desc=§oIt came from Nothing...§r\nThe tool will magically repair itself up to 50% of its maximum durability.
 
+modifier.essence_powered.name=Essence-Infused
+modifier.essence_powered.desc=§oIt's Essential!§r\nConsumes tiered Essence from the Offhand to empower attacks. Stronger Essence has greater impact. Damage will be reduced without any Essence.
+
 
 # Armor-Specific
-modifier.antimagic_armor.name=Anti-magic
-modifier.antimagic_armor.desc=§oHeresy!§r\nGrants excellent protection from Magical attacks, but makes your Spells less potent.
+modifier.antimagic_1_armor.name=Anti-magic
+modifier.antimagic_1_armor.desc=§oHeresy!§r\nGrants great protection (30%) from Magical attacks, but makes your Spells less potent.
+modifier.antimagic_2_armor.name=Anti-magic II
+modifier.antimagic_2_armor.desc=§oHeresy!§r\nGrants excellent protection (60%) from Magical attacks, but makes your Spells less potent.
 
 modifier.capitalism_armor.name=Capitalism
 modifier.capitalism_armor.desc=§oONE MILLION DOLLARS§r\nReduces damage taken, but drains your Money. Effects are stronger when you have more Money.
