TraitWarped this is a mild mess, but it is functional enough.
adds Thaumcraft warp to a tool by manipulating the "TC.WARP" tag, which recalculates when the tool is modified.
all levels use the same localization keys, and also slap "potion.potency.LEVEL" (where "LEVEL" is the trait instance level) onto the end of it, for easy extensibility.

also has a mildly cursed system for fetching it, where its value in TinkerTantrumTraits is a map that should be accessed from TraitWarped#getInstance, ideally before the game is fully loaded.

--- a/src/main/resources/assets/tinkertantrum/lang/en_us.lang
+++ b/src/main/resources/assets/tinkertantrum/lang/en_us.lang
@@ -27,11 +27,14 @@ modifier.cheese_reaper.name=Grim Cheepear
 modifier.cheese_reaper.desc=§oCheesy Punchline§r\nMakes killed mobs also drop Cheese.
 
 modifier.nihilo.name=Ex Nihilo
-modifier.nihilo.desc=§oIt came from Nothing...§r\nThe tool will magically repair itself up to 50% of its maximum durability.
+modifier.nihilo.desc=§5§oIt came from Nothing...§r\nThe tool will magically repair itself up to 50% of its maximum durability.
 
 modifier.essence_powered.name=Essence-Infused
 modifier.essence_powered.desc=§oIt's Essential!§r\nConsumes tiered Essence from the Offhand to empower attacks. Stronger Essence has greater impact. Damage will be reduced without any Essence.
 
+modifier.warped.name=Warped %s
+modifier.warped.desc=§5§oYou have gained Permanent Warp!§r\nThis equipment has some level of Warp.
+modifier.warped.extra=§5Warping %s
 
 # Armor-Specific
 modifier.antimagic_1_armor.name=Anti-magic
