improved TraitWarped a lot. - now extends AbstractArmorTraitLeveled, allows levels to work cumulatively.
- Warp added by this trait is no longer persistent in any way, it is dynamically removed, and any trace of it will completely disappear if the trait no longer exists on the item.
- This is achieved through OnItemBuilding event handlers for both base TCon and ConArm, with a little bit of funny abstraction to allow the same code function to work for both.

- removed TraitWarped#getInstance(), caused problems, so we're back to instantiating a HashMap and putting into it at static init.
- A config setting controls how many levels of the trait are instantiated and stored on its map value. Cannot be less than the highest level used by the base mod, as that would cause big problems.

Other stuf

- Modifier lists now assign to a new ArrayList, and are added to in static init, instead of assigning in static init.

- mod seems to currently hard depend on ConArm, i would like to make that not a hard dependency in the future, but it's not a major concern at this time.

--- a/src/main/resources/assets/tinkertantrum/lang/en_us.lang
+++ b/src/main/resources/assets/tinkertantrum/lang/en_us.lang
@@ -30,9 +30,9 @@ modifier.nihilo.desc=§5§oIt came from Nothing...§r\nThe tool will magically r
 modifier.essence_powered.name=Essence-Infused
 modifier.essence_powered.desc=§oIt's Essential!§r\nConsumes tiered Essence from the Offhand to empower attacks. Stronger Essence has greater impact. Damage will be reduced without any Essence.
 
-modifier.warped.name=Warped %s
+modifier.warped.name=Warped
 modifier.warped.desc=§5§oYou have gained Permanent Warp!§r\nThis equipment has some level of Warp.
-modifier.warped.extra=§5Warping %s
+modifier.warped.extra=§5Warped %s
 
 
 # Armor-Specific
