moved ConArm material stuff to 'armory' subpackage of 'material'. added Blood Drain modifier.
Blood Drain
- Vampirism integration, allows Vampires to drink any remaining Blood in entities when killing them with the tool.

- added Vampirism to compile and runtime.
- also added Blood Bag to runtime. Not available on a public maven, has to be cursemavened or published to local from the project.

--- a/src/main/resources/assets/tinkertantrum/lang/en_us.lang
+++ b/src/main/resources/assets/tinkertantrum/lang/en_us.lang
@@ -34,6 +34,9 @@ modifier.warped.name=Warped
 modifier.warped.desc=§5§oYou have gained Permanent Warp!§r\nThis equipment has some level of Warp.
 modifier.warped.extra=§5Warped %s
 
+modifier.blood_drain.name=Blood Drain
+modifier.blood_drain.desc=§oI'm going to suck your Blood!§r\nDrains Blood from killed foes, and if you're a Vampire, feeds you with it.
+
 
 # Armor-Specific
 modifier.antimagic_armor.name=Anti-magic
